# attrition-prediction

./: .gitignore  AGENTS.md  Attrition Analysis Dashboard.twb  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.codex/skills/tableau-attrition-verifier/: SKILL.md
.codex/skills/tableau-attrition-verifier/agents/: openai.yaml
.codex/skills/tableau-attrition-verifier/references/: workflow.md
.codex/skills/tableau-attrition-verifier/scripts/: validate_attrition_csv.py
.githooks/: pre-commit
data/processed/: attrition_clean.csv  feature_importance.csv  feature_names.csv  model_comparison.csv  predictions.csv  test.csv  test_scaled.csv  train.csv  train_scaled.csv
docs/: dataset_columns_ko.md
notebooks/: 01_eda.ipynb  01_eda.py  02_preprocessing.ipynb  02_preprocessing.py  03_modeling.ipynb  03_modeling.py  04_insights.ipynb  04_insights.py
outputs/: business_impact_analysis.md  company_size_estimation.md  statistical_findings.md  tableau_dashboard_draft.md  tableau_public_dashboard_plan.md
src/: data_loader.py  evaluation.py  plot_style.py  preprocessing.py
